# vulkano

./: .gitignore
examples/image/: Cargo.toml  build.rs  main.rs  quad.wgsl  shader.rs  vulkan.rs
examples/teapot/: main.rs  vert.vert
vulkano-shaders/: Cargo.toml
vulkano-shaders/src/: lib.rs
vulkano/autogen/: spirv_grammar.rs
vulkano/src/: range_map.rs
vulkano/src/command_buffer/auto/: mod.rs
vulkano/src/command_buffer/commands/: copy.rs  pipeline.rs  sync.rs
vulkano/src/descriptor_set/: allocator.rs
vulkano/src/image/: sys.rs  view.rs
vulkano/src/shader/: reflect.rs
vulkano/src/sync/future/: mod.rs
